# OpaqueRegistry

./: LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 053b2a134ce8_initial.py  118927438150_initial.py  34c65ea982f7_added_new_fields_on_packages_table.py  c2f749b4f233_added_package_version_published_and_.py
opaque_registry/: celery_app.py  main.py
opaque_registry/api/errors/: base.py  packages.py
opaque_registry/api/routes/: __init__.py  package.py
opaque_registry/api/schemas/: package.py
opaque_registry/api/schemas/helpers/: semver.py
opaque_registry/async_tasks/: create_shard_task.py
opaque_registry/async_tasks/shards/: __init__.py  tasks.py  tasks.py.bak
opaque_registry/async_tasks/utils/: redis_lock.py
opaque_registry/database/: connector.py  init_db.py  utils.py
opaque_registry/database/models/: __init__.py  packages.py  shards.py
opaque_registry/database/models/functions/: __init__.py  string_to_shard_id.py
opaque_registry/routes/: __init__.py  package.py
opaque_registry/schemas/: package.py
opaque_registry/services/: package.py  shards.py
